data/derived/fa15/progs/unify/prog0989.ml.out
Characters 130-143:
  | Sine e1              -> sin (pi *. (eval e1,x,y))
                                       ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type float
